syntax = "proto3";

package task;

option go_package = "analytics/internal/delivery/grpc/pb";

message Empty {}

message TaskStats {
  int32 completed_today = 1;
  int32 completed_week = 2;
  int32 total_tasks = 3;
}

service TaskService {
  rpc GetStats(Empty) returns (TaskStats);
}
